--- a/index.html
+++ b/index.html
@@ -1,9 +1,7 @@
 <!DOCTYPE html>
 <html>
 
-
 <head>
-
   <meta charset="utf-8" />
   <title>BusMall</title>
   <link rel="stylesheet" type="text/css" media="screen" href="CSS/reset.css" />
@@ -11,19 +9,18 @@
 </head>
 
 <body>
-
-  <img id="first" src=" ">
-  <img id="second" src=" ">
-  <img id="third" src=" ">
-  <ul id="results"></ul>
   <header></header>
-
   <main id="main-content">
-
-  </main>
-
-  <footer></footer>
-  <script src="js/app.js"></script>
+    <img id="first" src=" ">
+    <img id="second" src=" ">
+    <img id="third" src=" ">
+    <section id="colors-container"></section>
+    
+    <p>Finaly Done !!!!</p>
+    <canvas id="myChart"></canvas>
+    <footer></footer>
+    <script src="https://cdn.jsdelivr.net/npm/chart.js@2.9.3/dist/Chart.min.js"></script>
+    <script src="js/app.js"></script>
 </body>
 
 </html>
